--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nathan Zhang"
   avatar           : "profile.png"
-  bio              : "Electrical Engineering Student at ASU, trust the process"
+  bio              : "Electrical Engineering Student at ASU"
   location         : "Chandler, AZ"
   employer         :
   pubmed           :
