--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nathan Zhang"
-  avatar           : "profile.png"
+  avatar           : "IMG_7631.JPG"
   bio              : "Electrical Engineering Student at ASU"
   location         : "Chandler, AZ"
   employer         :
