--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           :
   googlescholar    :
-  email            :
+  email            : "natjiazhan@gmail.com"
   researchgate     :
   uri              :
   bitbucket        :
@@ -99,10 +99,10 @@ author:
   github           : "natjiazhan"
   google_plus      :
   keybase          :
-  instagram        :
+  Instagram        : "nashan.zhang"
   impactstory      :
   lastfm           :
-  linkedin         :
+  LinkedIn         : "https://www.linkedin.com/in/natjiazhan/"
   orcid            :
   pinterest        :
   soundcloud       :
