--- a/_config.yml
+++ b/_config.yml
@@ -200,8 +200,8 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
-      related: true
+      share: false
+      related: false
   # _pages
   - scope:
       path: ""
