--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Nathan Zhang"
 title_separator          : "-"
 name                     : &name "Nathan Zhang"
-description              : &description "Electrical Engineering Student at Arizona State University"
+description              : &description "Honors Electrical Engineering Student at Arizona State University"
 url                      : https://natjiazhan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "natjiazhan.github.io"
