--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   Instagram        : "nashan.zhang"
   impactstory      :
   lastfm           :
-  LinkedIn         : "https://www.linkedin.com/in/natjiazhan/"
+  LinkedIn         : "natjiazhan"
   orcid            :
   pinterest        :
   soundcloud       :
